--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,8 @@
         android:layout_height="48dp"
         android:layout_marginTop="52dp"
         android:text="@string/registerbtn"
+        android:textColor="@color/purple_700"
+        android:background="@drawable/btn_design2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
