--- a/app/src/main/res/layout/upcomingtrip_cardview.xml
+++ b/app/src/main/res/layout/upcomingtrip_cardview.xml
@@ -27,7 +27,8 @@
         <ImageView
             android:id="@+id/tripImage"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="5dp"
             android:contentDescription="@string/content_description_media"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/trip" />
@@ -36,21 +37,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_height="30dp"
                 android:orientation="horizontal">
 
-            <!-- Title, secondary and supporting text -->
+                <!-- Title, secondary and supporting text -->
                 <TextView
                     android:id="@+id/tripTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:text="Triptitle"
                     android:textAppearance="?attr/textAppearanceHeadline6"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toStartOf="@+id/tripType"
                     card_view:layout_constraintStart_toStartOf="parent"
                     card_view:layout_constraintTop_toTopOf="parent" />
 
@@ -62,16 +68,19 @@
 
 
                     android:background="@drawable/ic_oneway"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
                     card_view:layout_constraintTop_toTopOf="parent"
                     tools:ignore="RtlCompat" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <TextView
                 android:id="@+id/startTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
                 android:text="source"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textColor="?android:attr/textColorSecondary" />
@@ -80,7 +89,8 @@
                 android:id="@+id/endTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:text="destination"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textColor="?android:attr/textColorSecondary" />
@@ -88,7 +98,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -109,6 +120,7 @@
                     android:text="time"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
                     card_view:layout_constraintHorizontal_bias="0.5"
                     card_view:layout_constraintStart_toStartOf="parent"
@@ -118,7 +130,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -167,29 +179,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:gravity="end"
             android:orientation="horizontal"
-            android:textAlignment="viewEnd"
-            android:gravity="end">
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textAlignment="viewEnd">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/deleteIconBtn"
 
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/ic_delete"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="4dp"/>
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/ic_delete" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/editIconBtn"
 
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="4dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
 
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/ic_edit"
                 tools:ignore="RtlCompat" />
 
@@ -198,9 +214,10 @@
 
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="4dp"
+                android:layout_gravity="center_vertical"
 
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/ic_details"
                 tools:ignore="RtlCompat" />
 
@@ -208,8 +225,9 @@
                 android:id="@+id/startBtn"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="5dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="13dp"
+                android:layout_marginRight="13dp"
                 android:text="@string/start" />
         </LinearLayout>
 
