--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -99,15 +99,18 @@
         <EditText
             android:id="@+id/txtBackTripName"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_TRIP_NAME"
             android:inputType="textPersonName"
             android:maxLength="150"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_constraintBottom_toBottomOf="@+id/userEmail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/userEmail"
@@ -116,14 +119,17 @@
         <EditText
             android:id="@+id/txtBackStartPoint"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_START_POINT"
             android:inputType="textPersonName"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -132,14 +138,17 @@
         <EditText
             android:id="@+id/txtBackEndPoint"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_END_POINT"
             android:inputType="textPersonName"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
