--- a/app/src/main/res/layout/upcomingtrip_cardview.xml
+++ b/app/src/main/res/layout/upcomingtrip_cardview.xml
@@ -10,6 +10,7 @@
     card_view:strokeColor="@color/colorPrimary"
     android:layout_columnWeight="1"
     android:layout_rowWeight="1"
+    android:backgroundTint="@color/white"
 
     android:theme="@style/Theme.MaterialComponents.Light"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -225,9 +226,12 @@
                 android:id="@+id/startBtn"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/purple_200"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="13dp"
                 android:layout_marginRight="13dp"
+
                 android:text="@string/start" />
         </LinearLayout>
 
