--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
+<!--    <color name="purple_220">#E6DDF1</color>-->
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    <color name="purple_700">#FF3700B3</color>-->
+<!--    <color name="teal_200">#FF03DAC5</color>-->
+<!--    <color name="teal_700">#FF018786</color>-->
+<!--    <color name="black">#FF000000</color>-->
+<!--    <color name="white">#FFFFFFFF</color>-->
+<!--    <color name="twitterBlue">#1DA1F2</color>-->
+
+    <color name="purple_200">#5B7290</color>
     <color name="purple_220">#E6DDF1</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="purple_500">#663366</color>
+    <color name="purple_700">#660F57</color>
+    <color name="teal_200">#003366</color>
+    <color name="teal_700">#B1BDCD</color>
+    <color name="black">#B1BDCD</color>
+    <color name="white">#E7EBF0</color>
     <color name="twitterBlue">#1DA1F2</color>
 </resources>
