strings , ui changes & testing

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -92,6 +92,7 @@
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -119,7 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/loginTxtBtn"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/purple_200"
                 android:textSize="17sp" />
         </LinearLayout>
 
