--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreenActivity"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/header_background">
     <ImageView
         android:id="@+id/userImage"
         android:layout_width="0dp"
@@ -21,22 +21,21 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/userEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:textColor="#fff"
+        android:gravity="center_horizontal"
         android:text="Trip Tracker"
         android:textAlignment="center"
+        android:textColor="#fff"
         android:textSize="70sp"
         android:transitionName="logo_text"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userImage"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toBottomOf="@+id/userImage" />
 
     <TextView
         android:id="@+id/textView2"
@@ -44,7 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:textColor="#fff"
-        android:text="Trip Tracker app"
 
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
