--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -22,6 +22,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="50dp"
             android:text="@string/LBL_REPEAT"
+            android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -35,6 +36,7 @@
             android:inputType="number"
             android:maxLength="3"
             android:text="3"
+            android:textColor="@color/purple_200"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/swtchRepeatingRound"
             app:layout_constraintStart_toStartOf="@+id/btnAddRoundNotes"
@@ -60,6 +62,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="30dp"
             android:text="@string/LBL_TRIP_NAME"
+            android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,6 +74,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="50dp"
             android:text="@string/LBL_START"
+            android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userEmail" />
 
@@ -82,6 +86,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="50dp"
             android:text="@string/LBL_END"
+            android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -93,6 +98,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="50dp"
             android:text="@string/LBL_NOTES"
+            android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
