--- a/app/src/main/res/layout/upcomingtrip_cardview.xml
+++ b/app/src/main/res/layout/upcomingtrip_cardview.xml
@@ -7,7 +7,6 @@
     card_view:cardElevation="25dp"
     card_view:cardCornerRadius="10dp"
     card_view:shapeAppearance="@color/purple_200"
-    card_view:strokeColor="@color/colorPrimary"
     android:layout_columnWeight="1"
     android:layout_rowWeight="1"
     android:backgroundTint="@color/white"
@@ -55,6 +54,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:text="Triptitle"
+                    android:textColor="@color/teal_200"
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toStartOf="@+id/tripType"
@@ -66,7 +66,6 @@
 
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-
 
                     android:background="@drawable/ic_oneway"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -83,8 +82,10 @@
                 android:layout_marginTop="5dp"
                 android:gravity="center_vertical"
                 android:text="source"
+                android:drawableLeft="@drawable/ic_source"
+
                 android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
+                android:textColor="@color/purple_500" />
 
             <TextView
                 android:id="@+id/endTxt"
@@ -93,8 +94,10 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:text="destination"
+                android:drawableLeft="@drawable/ic_destination"
+
                 android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
+                android:textColor="@color/purple_200" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -108,6 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="date"
+                    android:drawableLeft="@drawable/ic_date"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -119,11 +123,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="time"
+                    android:drawableLeft="@drawable/ic_time"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
-                    card_view:layout_constraintHorizontal_bias="0.5"
+                    card_view:layout_constraintHorizontal_bias="0.7"
                     card_view:layout_constraintStart_toStartOf="parent"
                     card_view:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -139,6 +144,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="distance"
+                    android:drawableLeft="@drawable/ic_distance"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     card_view:layout_constraintEnd_toStartOf="@+id/durationTxt"
@@ -152,6 +158,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="duration"
+                    android:drawableLeft="@drawable/ic_duration"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     card_view:layout_constraintEnd_toEndOf="parent"
@@ -167,6 +174,7 @@
                     android:layout_marginRight="16dp"
                     android:gravity="right"
                     android:text="avg_speed"
+                    android:drawableLeft="@drawable/ic_speed"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     card_view:layout_constraintEnd_toEndOf="parent"
@@ -189,17 +197,19 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/deleteIconBtn"
 
-                android:layout_width="30dp"
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:background="@drawable/ic_delete" />
+                android:background="@drawable/ic_delete"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/editIconBtn"
 
-                android:layout_width="30dp"
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="20dp"
@@ -213,11 +223,11 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/viewIconBtn"
 
-                android:layout_width="30dp"
+                android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
 
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/ic_details"
                 tools:ignore="RtlCompat" />
