--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,13 +12,32 @@
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history"
             android:title="@string/menu_history" />
+
+        <item
+            android:id="@+id/nav_maps"
+            android:icon="@drawable/ic_maps"
+            android:title="@string/menu_maps" />
+    </group>
+
+    <group android:id="@+id/part2">
         <item
             android:id="@+id/nav_sync"
             android:icon="@drawable/ic_sync"
             android:title="@string/menu_sync" />
         <item
+            android:id="@+id/nav_language"
+            android:title="@string/menu_language" />
+    </group>
+
+    <group android:id="@+id/part3">
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
             android:title="@string/menu_logout" />
+
+        <item
+            android:id="@+id/nav_deleteAccount"
+            android:icon="@drawable/ic_deleteaccount"
+            android:title="@string/menu_deleteAccount" />
     </group>
 </menu>
