--- a/app/src/main/res/layout/last_trips_dialog.xml
+++ b/app/src/main/res/layout/last_trips_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="370dp"
-    android:layout_height="match_parent"
+    android:layout_height="400dp"
     android:layout_gravity="center">
 
     <androidx.recyclerview.widget.RecyclerView
