button update is added

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,9 @@
             android:background="@drawable/btn_design"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="@string/login"
+            android:text="@string/loginTxtBtn"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
             app:layout_constraintEnd_toEndOf="parent"
