--- a/app/src/main/res/layout/notes_dialog.xml
+++ b/app/src/main/res/layout/notes_dialog.xml
@@ -46,6 +46,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:text="Add"
+        android:textAllCaps="false"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -56,6 +58,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Done"
+        android:textAllCaps="false"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="@+id/btnAddNote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnAddNote" />
