--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,6 +21,8 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/btn_design"
             android:text="@string/registerbtn"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
