--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -57,6 +57,7 @@
             android:layout_marginRight="55dp"
             android:text="@string/okbtn"
             android:textAllCaps="false"
+            android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/shownotesBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/shownotesBtn"
@@ -263,6 +264,7 @@
             android:layout_marginBottom="45dp"
             android:text="@string/shownotes"
             android:textAllCaps="false"
+            android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tripspeedTxt"
