--- a/app/src/main/res/layout/dialog_notifier.xml
+++ b/app/src/main/res/layout/dialog_notifier.xml
@@ -50,21 +50,25 @@
         <Button
             android:id="@+id/btnDecline"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="0.5"
             android:backgroundTint="@color/purple_200"
             android:text="@string/Snooze"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btnAnswer"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:layout_weight="0.5"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             android:backgroundTint="@color/purple_200"
             android:text="@string/startTrip"
             android:textColor="@color/white" />
