--- a/app/src/main/res/layout/last_trips_dialog.xml
+++ b/app/src/main/res/layout/last_trips_dialog.xml
@@ -35,6 +35,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="Show"
+        android:textAllCaps="false"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvLastTrips" />
