--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -168,6 +168,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:text="@string/CANCEL"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
@@ -178,6 +180,8 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="@string/DONE"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btnCancel" />
@@ -188,6 +192,8 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_note_add"
             android:text="Add Notes"
+            android:textAllCaps="false"
+            android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
             app:layout_constraintStart_toStartOf="@+id/txtBackEndPoint"
