--- a/app/src/main/res/layout/upcomingtrip_cardview.xml
+++ b/app/src/main/res/layout/upcomingtrip_cardview.xml
@@ -222,11 +222,9 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/viewIconBtn"
-
                 android:layout_width="25dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
-
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/ic_details"
@@ -238,10 +236,11 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/purple_200"
                 android:textColor="@color/white"
+                android:textAllCaps="false"
+                android:textSize="17dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="13dp"
                 android:layout_marginRight="13dp"
-
                 android:text="@string/start" />
         </LinearLayout>
 
