--- a/app/src/main/res/layout/notes_dialog.xml
+++ b/app/src/main/res/layout/notes_dialog.xml
@@ -10,7 +10,7 @@
     android:layout_marginBottom="16dp">
 
     <ListView
-        android:id="@+id/lvNotes"
+        android:id="@+id/lvShowNotes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
@@ -50,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btnNotesDone"
+        android:id="@+id/btnShowNotesOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
