--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,7 @@
             android:title="@string/menu_sync" />
         <item
             android:id="@+id/nav_language"
+            android:icon="@drawable/ic_language"
             android:title="@string/menu_language" />
     </group>
 
