--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="black">#B1BDCD</color>
     <color name="white">#E7EBF0</color>
     <color name="twitterBlue">#1DA1F2</color>
+    <color name="red">#F44336</color>
 </resources>
